[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/tree-tools/scenes/editor/grapheditor.gd" type="Script" id=1]
[ext_resource path="res://addons/tree-tools/scenes/contextual_menu/context_menu.tscn" type="PackedScene" id=2]

[node name="editor" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
right_disconnects = true
script = ExtResource( 1 )

[node name="clear_confirmation_popup" type="ConfirmationDialog" parent="."]
margin_left = 234.0
margin_top = 276.0
margin_right = 621.0
margin_bottom = 334.0
size_flags_horizontal = 2
size_flags_vertical = 2
dialog_text = "The content of the TreeNode will be erased. Are you sure?"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -206.0
margin_top = 10.0
margin_bottom = 38.0

[node name="top_right" type="VBoxContainer" parent="MarginContainer"]
margin_right = 206.0
margin_bottom = 38.0
alignment = 2

[node name="buttons" type="HBoxContainer" parent="MarginContainer/top_right"]
margin_right = 206.0
margin_bottom = 20.0

[node name="export_button" type="Button" parent="MarginContainer/top_right/buttons"]
margin_right = 52.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Export"

[node name="import_button" type="Button" parent="MarginContainer/top_right/buttons"]
margin_left = 56.0
margin_right = 112.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Import"

[node name="clear_button" type="Button" parent="MarginContainer/top_right/buttons"]
margin_left = 116.0
margin_right = 160.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Clear"

[node name="add_button" type="Button" parent="MarginContainer/top_right/buttons"]
margin_left = 164.0
margin_right = 184.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
text = "+"

[node name="Label" type="Label" parent="MarginContainer/top_right"]
margin_top = 24.0
margin_right = 153.0
margin_bottom = 38.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Right-click to add nodes"

[node name="PopupMenu" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="connection_request" from="." to="." method="_on_editor_connection_request"]
[connection signal="disconnection_request" from="." to="." method="_on_editor_disconnection_request"]
[connection signal="gui_input" from="." to="." method="_on_editor_gui_input"]
[connection signal="confirmed" from="clear_confirmation_popup" to="." method="clear"]
[connection signal="pressed" from="MarginContainer/top_right/buttons/clear_button" to="." method="raise_clear_confirm"]
[connection signal="pressed" from="MarginContainer/top_right/buttons/add_button" to="." method="_on_add_button_pressed"]
